--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,9 @@ cython_debug/
 daily_progress/*
 src/jupyter/*.md
 src/jupyter/daily_progress/*
+/.idea/.gitignore
+/.idea/GitHubSentinel.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
