添加订阅 hacker news 的功能

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "github_token": "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",
     "email":  {
-        "smtp_server": "smtp.exmail.qq.com",
+        "smtp_server": "smtp.gmail.com",
         "smtp_port": 465,
-        "from": "pjt@zaijidata.com",
+        "from": "lds8988@gmail.com",
         "password": "",
-        "to": "test@zaijidata.com"
+        "to": "lds8988@qq.com"
     },
     "slack_webhook_url": "your_slack_webhook_url",
     "subscriptions_file": "subscriptions.json",
