--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "llm": {
         "model_type": "ollama",
         "openai_model_name": "gpt-4o-mini",
-        "ollama_model_name": "llama3.1",
+        "ollama_model_name": "llama3.1:8b-instruct-q8_0",
         "ollama_api_url": "http://localhost:11434/api/chat"
     },
     "report_types": [
